--- a/stats-glow-mind/src/app/components/register/register.component.html
+++ b/stats-glow-mind/src/app/components/register/register.component.html
@@ -1,1 +1,16 @@
-<p>register works!</p>
+<h2>Registro de usuario</h2>
+<form [formGroup]="formRegister" (ngSubmit)="onSubmit()">
+    <div class="mb-3">
+        <label class="form-label">Nombre de Usuario: </label>
+        <input type="text" class="form-control" formControlName="username">
+    </div>
+    <div class="mb-3">
+        <label class="form-label">Email: </label>
+        <input type="text" class="form-control" formControlName="email">
+    </div>
+    <div class="mb-3">
+        <label class="form-label">Password: </label>
+        <input type="password" class="form-control" formControlName="password">
+    </div>
+    <input type="submit" value="Enviar">
+</form>
