--- a/stats-glow-mind/src/app/components/main/main.component.html
+++ b/stats-glow-mind/src/app/components/main/main.component.html
@@ -1,3 +1,6 @@
-<div>
-    <h2>Bienvenido, {{ userName }}</h2>
+
+<div class="wrapper">
+    <div>
+        <h2>Bienvenido, {{ userName }}</h2>
+    </div>
 </div>
