--- a/stats-glow-mind/src/app/components/login/login.component.html
+++ b/stats-glow-mind/src/app/components/login/login.component.html
@@ -1,12 +1,20 @@
-<h2>Login de usuario</h2>
-<form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
-    <div class="mb-3">
-        <label class="form-label">Email</label>
-        <input type="text" class="form-control" formControlName="email">
+<div class="wrapper">
+    <div class="body">
+        <img class="register_icon" src="../assets/images/icons/register.png" alt="Login">
+        <h1>Inicia sesión</h1>
+        <p></p>
+        <form class="form" [formGroup]="formLogin" (ngSubmit)="onSubmit()">
+            <div class="mb-3">
+                <label class="form-label">Email:</label>
+                <input type="text" class="form-control" formControlName="email">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Contraseña:</label>
+                <input type="password" class="form-control" formControlName="password">
+            </div>
+            <input type="submit" value="Enviar">
+        </form>
+        <p class="mt-3">¿No tienes cuenta? <a routerLink="/register">Registrate</a></p>
+        <button class="btn btn-info" (click)="onClick()"><img class="google_icon" src="../assets/images/icons/google.png" alt="Login Google">Login With Google</button>
     </div>
-    <div class="mb-3">
-        <label class="form-label">Password</label>
-        <input type="password" class="form-control" formControlName="password">
-    </div>
-    <input type="submit" value="Enviar">
-</form>
+</div>
