--- a/stats-glow-mind/src/styles.css
+++ b/stats-glow-mind/src/styles.css
@@ -1,1 +1,114 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    height: 100%;
+}
+
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 105%;
+    background-color: #f5f5f5;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #002649;
+}
+
+.body {
+    width: 100%;
+    max-width: 400px;
+    margin: 10px;
+    padding: 15px;
+    text-align: center;
+    border: 1px solid #ccc; /* Añade un borde para resaltar el formulario */
+    border-radius: 10px; /* Bordes redondeados */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+}
+
+.form {
+    margin-top: 15%;
+    margin-bottom: 15%;
+}
+
+.logo {
+    cursor: pointer;
+    height: 100px;
+    margin: 5px;
+}
+
+.title {
+    cursor: pointer;
+    height: 60px;
+    margin-left: 10px;
+}
+
+.buttons {
+    display: flex;
+    gap: 10px; /* Espaciado entre los botones */
+    align-items: center;
+    justify-content: center;
+}
+
+.login_icon {
+    width: 40px; /* Ajusta este valor según tus necesidades */
+    height: auto;
+    margin-right: 20px;
+    transition: transform 0.3s ease;
+}
+
+.register_icon {
+    width: 100px; /* Ajusta este valor según tus necesidades */
+    height: auto;
+    margin-right: 20px;
+    transition: transform 0.3s ease;
+}
+
+.logout_icon {
+    width: 35px; /* Ajusta este valor según tus necesidades */
+    height: 30px;
+    margin-right: 20px;
+    transition: transform 0.3s ease;
+}
+
+.google_icon {
+    width: 30px; /* Ajusta este valor según tus necesidades */
+    height: auto;
+    margin-right: 20px;
+    transition: transform 0.3s ease;
+}
+
+.login_icon:hover,
+.logout_icon:hover {
+    transform: scale(1.1); /* Escala la imagen al 110% en hover */
+    cursor: pointer; /* Cambia el cursor al estilo de un enlace */
+}
+
+.btn.btn-info {
+    background-color: white; /* Cambia el color de fondo a gris */
+    border-color: #002649;
+}
+
+.btn.btn-info:hover {
+    background-color: #ebebeb;
+    border-color: #002649;
+}
+
+/* Estilos globales para Toastr */
+.notification-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px; /* Ajusta el ancho según tus necesidades */
+    padding: 20px;
+    background-color: #002649; /* Color de fondo del contenedor */
+    color: white; /* Color del texto */
+    border-radius: 10px; /* Borde redondeado */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Sombra */
+    z-index: 1000; /* Asegúrate de que esté por encima de otros elementos */
+}
