--- a/stats-glow-mind/src/app/components/login/login.component.html
+++ b/stats-glow-mind/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="body">
+    <div class="box-form">
         <img class="register_icon" src="../assets/images/icons/register.png" alt="Login">
         <h1>Inicia sesión</h1>
         <p></p>
@@ -12,9 +12,9 @@
                 <label class="form-label">Contraseña:</label>
                 <input type="password" class="form-control" formControlName="password">
             </div>
-            <input type="submit" value="Enviar">
+            <input class="enviar" type="submit" value="Enviar">
         </form>
         <p class="mt-3">¿No tienes cuenta? <a routerLink="/register">Registrate</a></p>
-        <button class="btn btn-info" (click)="onClick()"><img class="google_icon" src="../assets/images/icons/google.png" alt="Login Google">Login With Google</button>
+        <button class="google-btn" (click)="onClick()"><img class="google_icon" src="../assets/images/icons/google.png" alt="Login Google">Login With Google</button>
     </div>
 </div>
