--- a/stats-glow-mind/src/app/app.component.html
+++ b/stats-glow-mind/src/app/app.component.html
@@ -2,7 +2,7 @@
   <img class="title" src="../assets/images/logo/statsGlowMind_azul.png" alt="Logo" (click)="redirectToMain()">
   <div class="menu">
     <button class="button_menu" routerLink="/stats">Estadísticas</button>
-    <button class="button_menu" routerLink="/stats/standings">Clasificación</button>
+    <button class="button_menu" routerLink="/stats">Clasificación</button>
     <button class="button_menu" routerLink="/stats">Jugadores</button>
     <button class="button_menu" routerLink="/stats">Equipos</button>
     <button class="button_menu" routerLink="/stats">Líderes</button>
