--- a/stats-glow-mind/src/app/components/main/main.component.html
+++ b/stats-glow-mind/src/app/components/main/main.component.html
@@ -3,18 +3,27 @@
 </div>
 <div class="wrapper">
     <div class="main">
-        <div class="image-container">
+        <div class="description">
+            <img class="logo" src="../assets/images/logo/medusa.png" alt="Logo Medusa">
+            <p>    
+                <span class="name">StatsGlowMind</span> es una aplicación web dedicada a la liga NBA, la cual muestra información en tiempo real 
+                de los partidos, clasificación de cada conferencia, playoffs y las estadísticas de los equipos y jugadores.
+                También realiza un análisis del rendimiento de los jugadores, implementando algoritmos y técnicas de análisis de datos.
+                Por último, es capaz de predecir que equipo tiene más probabilidad de ganar contra otro, utilizando Machine Learning.
+            </p>
+        </div>
+        <div class="main-container">
             <button routerLink="/stats">
                 <img class="basket_icon" src="../assets/images/icons/basketball.png" alt="Basketball">
                 <br>DATOS NBA
             </button>
             <button>
                 <img class="basket_icon" src="../assets/images/icons/data_basket.png" alt="Data Basketball">
-                <br>DATOS EQUIPOS
+                <br>ESTADÍSTICAS
             </button>
             <button>
                 <img class="basket_icon" src="../assets/images/icons/stats.png" alt="Stats">
-                <br>ESTADÍSTICAS
+                <br>ANÁLISIS
             </button>
             <button>
                 <img class="basket_icon" src="../assets/images/icons/predicts.png" alt="Predicts">
