--- a/stats-glow-mind/src/app/components/register/register.component.html
+++ b/stats-glow-mind/src/app/components/register/register.component.html
@@ -19,6 +19,13 @@
                 <label class="form-label">Repetir Contraseña: </label>
                 <input type="password" class="form-control" formControlName="repeatPassword">
             </div>
+            <div class="mb-3">
+                <label for="role">Rol:</label>
+                <select formControlName="role" id="role">
+                    <option value="user">Usuario</option>
+                    <option value="admin">Administrador</option>
+                </select>
+            </div>
             <input class="enviar" type="submit" value="Enviar">
         </form>
         <p></p>
