--- a/stats-glow-mind/src/app/components/stats/standings/standings.component.css
+++ b/stats-glow-mind/src/app/components/stats/standings/standings.component.css
@@ -1,7 +1,9 @@
 .standings {
   display: flex;
   justify-content: space-between;  /* Para espacio entre los bloques */
-  padding: 2.5%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  padding-bottom: 2.5%;
   background-color: #f5f5f5;
 }
   
@@ -26,7 +28,7 @@ thead {
 }
 
 th, td {
-  padding: 8px;
+  padding: 1%;
   text-align: center;
   border-bottom: 1px solid #ddd;
   width: 10%;
