gestión de usuarios, actualización y hosting

--- a/stats-glow-mind/src/app/components/main/main.component.html
+++ b/stats-glow-mind/src/app/components/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="user">
-    <button class="user-btn">{{ userName }}</button>
+    <button class="user-btn" (click)="checkUserRole()">{{ userName }}</button>
 </div>
 <div class="wrapper">
     <div class="main">
