--- a/stats-glow-mind/src/app/components/register/register.component.html
+++ b/stats-glow-mind/src/app/components/register/register.component.html
@@ -20,8 +20,8 @@
                 <input type="password" class="form-control" formControlName="repeatPassword">
             </div>
             <div class="mb-3">
-                <label for="role">Rol:</label>
-                <select formControlName="role" id="role">
+                <label for="rol">Rol de Usuario:</label>
+                <select formControlName="rol" id="rol">
                     <option value="user">Usuario</option>
                     <option value="admin">Administrador</option>
                 </select>
